Added about page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,8 +6,7 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  padding: 30px;
-  line-height: 1.5em;
+  padding: 65px 0 30px 0;
   width: 100%;
 }
 @media screen and (max-width: 600px) {
