--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,8 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #ffffff;
+  line-height: 1.5em;
+
   #root {
     display: flex;
     flex-direction: column;
