--- a/src/components/TitleImage/TitleImage.scss
+++ b/src/components/TitleImage/TitleImage.scss
@@ -30,6 +30,7 @@
     width: 80%;
     white-space: normal;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    text-wrap: nowrap;
   }
 
   @media (max-width: 600px) {
