--- a/src/index.scss
+++ b/src/index.scss
@@ -5,11 +5,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  line-height: 143%;
+  font-family: "Montserrat", sans-serif;
 }
 body {
-  font-family: "Montserrat", sans-serif;
   background-color: #ffffff;
-  line-height: 1.5em;
 
   #root {
     display: flex;
