--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -8,6 +8,15 @@
     height: 250px;
   }
 
+  .previous {
+    transform: rotate(180deg);
+  }
+  .navigation-arrow {
+    height: 80px;
+    @media screen and (max-width: 600px) {
+      height: 20px;
+    }
+  }
   img {
     width: 100%;
     height: 100%;
@@ -21,21 +30,21 @@
     background: none;
     border: none;
     color: white;
-    font-size: 48px;
     cursor: pointer;
     padding: 10px;
-    transition: opacity 0.3s;
-
-    &:hover {
-      opacity: 0.7;
-    }
 
     &--prev {
-      left: 20px;
+      left: 10px;
+      @media screen and (max-width: 600px) {
+        left: 2px;
+      }
     }
 
     &--next {
-      right: 20px;
+      right: 10px;
+      @media screen and (max-width: 600px) {
+        right: 2px;
+      }
     }
   }
 
