--- a/src/components/Thumbnail/Thumbnail.scss
+++ b/src/components/Thumbnail/Thumbnail.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   @media screen and (max-width: 600px) {
     height: 255px;
-    width: 335px;
+    width: 100%;
   }
 
   img {
