--- a/src/components/Thumbnail/Thumbnail.scss
+++ b/src/components/Thumbnail/Thumbnail.scss
@@ -15,8 +15,19 @@
     object-fit: cover;
   }
 
+  &::before {
+    content: "";
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    background: linear-gradient(180deg, #0a0a0a00 0%, #04040469 41%, #000000);
+  }
+
   h1 {
     position: absolute;
+    z-index: 20;
     bottom: 20px;
     left: 20px;
     font-size: 18px;
@@ -24,6 +35,5 @@
     color: white;
     margin: 0;
     max-width: 170px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
   }
 }
