--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ body {
     align-items: center;
     main {
       max-width: 1240px;
+      margin: 0 auto;
+      padding: 0 20px;
       width: 100%;
       box-sizing: border-box;
       flex-grow: 1;
@@ -28,7 +30,7 @@ body {
       align-items: center;
 
       @media screen and (max-width: 600px) {
-        padding: 0 20px 20px 20px;
+        padding-bottom: 20px;
       }
     }
   }
