--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ body {
     main {
       max-width: 1240px;
       margin: 0 auto;
-      padding: 0 20px;
+      padding: 0 20px 20px 20px;
       width: 100%;
       box-sizing: border-box;
       flex-grow: 1;
@@ -28,10 +28,6 @@ body {
       flex-direction: column;
       justify-content: space-around;
       align-items: center;
-
-      @media screen and (max-width: 600px) {
-        padding-bottom: 20px;
-      }
     }
   }
 }
